# agl-qtapp-example

./: LICENSE  Main.qml
cmake/: common.cmake
oe-local-files/: CMakeLists.txt  Main.qml  main.cpp
proto/: agl_shell.proto
src/: AglShellGrpcClient.cpp  AglShellGrpcClient.h  applicationlauncher.cpp  applicationlauncher.h  constants.h  hmi-debug.h  homescreenhandler.cpp  homescreenhandler.h  main.cpp  mastervolume.cpp  mastervolume.h  statusbarmodel.cpp  statusbarmodel.h  statusbarserver.cpp  statusbarserver.h
